// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 1`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "foo",
    ],
  },
  "bar": Object {
    "i": 7,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 2`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "foo",
    ],
  },
  "bar": Object {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 3`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "bar",
      "foo",
    ],
  },
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 4`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "bar",
      "foo",
    ],
  },
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 5`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "bar",
      "foo",
    ],
  },
  "bar": Object {
    "__typename": "Bar",
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (1/2) 6`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "bar",
      "foo",
    ],
  },
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 1`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "foo",
    ],
  },
  "bar": Object {
    "i": 7,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 2`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "foo",
    ],
  },
  "bar": Object {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 3`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "bar",
      "foo",
    ],
  },
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 4`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "bar",
      "foo",
    ],
  },
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 5`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "bar",
      "foo",
    ],
  },
  "bar": Object {
    "__typename": "Bar",
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`Cache writeFragment will write some deeply nested data into the store at any id (2/2) 6`] = `
Object {
  "__META": Object {
    "extraRootIds": Array [
      "bar",
      "foo",
    ],
  },
  "bar": Object {
    "__typename": "Bar",
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "__typename": "Foo",
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "__ref": "bar",
    },
  },
}
`;

exports[`InMemoryCache#modify should allow invalidation using details.INVALIDATE 1`] = `
Object {
  "Author:{\\"name\\":\\"Maria Dahvana Headley\\"}": Object {
    "__typename": "Author",
    "name": "Maria Dahvana Headley",
  },
  "Book:{\\"isbn\\":\\"0374110034\\"}": Object {
    "__typename": "Book",
    "author": Object {
      "__ref": "Author:{\\"name\\":\\"Maria Dahvana Headley\\"}",
    },
    "isbn": "0374110034",
    "title": "Beowulf: A New Translation",
  },
  "ROOT_QUERY": Object {
    "__typename": "Query",
    "currentlyReading": Object {
      "__ref": "Book:{\\"isbn\\":\\"0374110034\\"}",
    },
  },
}
`;

exports[`TypedDocumentNode<Data, Variables> should determine Data and Variables types of {write,read}{Query,Fragment} 1`] = `
Object {
  "Author:{\\"name\\":\\"John C. Mitchell\\"}": Object {
    "__typename": "Author",
    "name": "John C. Mitchell",
  },
  "Book:{\\"isbn\\":\\"0262133210\\"}": Object {
    "__typename": "Book",
    "author": Object {
      "__ref": "Author:{\\"name\\":\\"John C. Mitchell\\"}",
    },
    "isbn": "0262133210",
    "title": "Foundations for Programming Languages",
  },
  "ROOT_QUERY": Object {
    "__typename": "Query",
    "book({\\"isbn\\":\\"0262133210\\"})": Object {
      "__ref": "Book:{\\"isbn\\":\\"0262133210\\"}",
    },
  },
}
`;

exports[`TypedDocumentNode<Data, Variables> should determine Data and Variables types of {write,read}{Query,Fragment} 2`] = `
Object {
  "Author:{\\"name\\":\\"Harold Abelson\\"}": Object {
    "__typename": "Author",
    "name": "Harold Abelson",
  },
  "Author:{\\"name\\":\\"John C. Mitchell\\"}": Object {
    "__typename": "Author",
    "name": "John C. Mitchell",
  },
  "Book:{\\"isbn\\":\\"0262133210\\"}": Object {
    "__typename": "Book",
    "author": Object {
      "__ref": "Author:{\\"name\\":\\"John C. Mitchell\\"}",
    },
    "isbn": "0262133210",
    "title": "Foundations for Programming Languages",
  },
  "Book:{\\"isbn\\":\\"0262510871\\"}": Object {
    "__typename": "Book",
    "author": Object {
      "__ref": "Author:{\\"name\\":\\"Harold Abelson\\"}",
    },
    "isbn": "0262510871",
    "title": "Structure and Interpretation of Computer Programs",
  },
  "ROOT_QUERY": Object {
    "__typename": "Query",
    "book({\\"isbn\\":\\"0262133210\\"})": Object {
      "__ref": "Book:{\\"isbn\\":\\"0262133210\\"}",
    },
  },
  "__META": Object {
    "extraRootIds": Array [
      "Book:{\\"isbn\\":\\"0262510871\\"}",
    ],
  },
}
`;
